# fmi-ls-wasm

./: .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
.devcontainer/features/wasm-rust/: devcontainer-feature.json  install.sh
.github/workflows/: build-examples.yml  build-spec.yml  build.yml
docs/: index.adoc
examples/adder-c-fmu/: adder-c-fmu.c
examples/adder-fmu-c-runner/: main.c
examples/adder-fmu-runner/src/: main.rs
examples/adder-fmu-rust-runner/src/: main.rs
examples/adder-fmu/src/: lib.rs
examples/adder-res-c-fmu/: adder-res-c-fmu.c  modelDescription.xml
examples/adder-res-rust-fmu/: Cargo.toml  modelDescription.xml
examples/adder-res-rust-fmu/.cargo/: config.toml
examples/adder-res-rust-fmu/src/: lib.rs
examples/adder-wat-fmu/: adder-wat-fmu.wat
main/: LICENSE.txt  index.adoc  index.html
main/wit/: fmi3-callbacks.wit  fmi3-co-simulation.wit  fmi3-common.wit  fmi3-types.wit  world.wit
wit/: fmi3-callbacks.wit  fmi3-co-simulation.wit  fmi3-model-exchange.wit  fmi3-scheduled-execution.wit  world.wit
